--- a/public/index.html
+++ b/public/index.html
@@ -314,7 +314,7 @@
     <p><br>
 <br /></p>
 
-<p>A geographer and environmental scientist by training, I aspire to elevate my skillset in predictive analytics to develop insights into socio-ecological issues and build useful data-driven tools. Thus, I consider myself an environmental data scientist in training. I have over two years of project-based experience with the <a href="https://www.pdx.edu/geography/center-for-spatial-analysis-research-csar" target="_blank">Center for Spatial Analysis &amp; Research</a> and the <a href="http://www.suprlab.org/" target="_blank">Sustaining Urban Places Research Lab</a>, and have worked on several other projects as a freelancer. I am currently offering a variety of GIS &amp; data services as an independent contractor, so please feel free to contact me if you feel my skillset could help you achieve your goals.</p>
+<p>A geographer and environmental scientist by training, I aspire to elevate my skillset in predictive analytics to develop insights into socio-ecological issues and build useful data-driven tools. Thus, I consider myself an environmental data scientist in training. I have over two years of project-based experience with the <a href="https://www.pdx.edu/geography/center-for-spatial-analysis-research-csar" target="_blank">Center for Spatial Analysis &amp; Research</a> the <a href="http://www.suprlab.org/" target="_blank">Sustaining Urban Places Research Lab</a>, and <a href="http://urbandesign4health.com/" target="_blank">UD4H</a>. I am currently offering a variety of GIS &amp; data services as an independent contractor, so please feel free to contact me if you feel my skillset could help you achieve your goals.</p>
 
 
     <div class="row">
