Minor Tweaks to Home Page

--- a/public/404.html
+++ b/public/404.html
@@ -234,6 +234,10 @@
   <h2>Projects</h2>
   
   <ul>
+    <li><a href="/project/data-dashboard-example/">Household Characteristics Explorer | Shiny Dashboard</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/project/arctic-story-map/">Story Map | Arctic Area-Based Management</a></li>
   </ul>
   
