--- a/public/project/arctic-story-map/index.html
+++ b/public/project/arctic-story-map/index.html
@@ -15,7 +15,7 @@
   
     
   
-  <meta name="description" content="A story map developed for the Circumpolar Conservation Union&#39;s website which describes the state of Area-Based Management of Arctic ecosystems.">
+  <meta name="description" content="An ESRI Story Map developed for the Circumpolar Conservation Union&#39;s website which describes the state of Area-Based Management of Arctic ecosystems. This was a collaborative effort between analysts at CCU &amp; CSAR.">
 
   
   <link rel="alternate" hreflang="en-us" href="/project/arctic-story-map/">
@@ -94,7 +94,7 @@
   <meta property="og:site_name" content="Alec Trusty">
   <meta property="og:url" content="/project/arctic-story-map/">
   <meta property="og:title" content="Story Map | Arctic Area-Based Management | Alec Trusty">
-  <meta property="og:description" content="A story map developed for the Circumpolar Conservation Union&#39;s website which describes the state of Area-Based Management of Arctic ecosystems.">
+  <meta property="og:description" content="An ESRI Story Map developed for the Circumpolar Conservation Union&#39;s website which describes the state of Area-Based Management of Arctic ecosystems. This was a collaborative effort between analysts at CCU &amp; CSAR.">
   
   
     
