--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <hr>
 <div id="content">
 <div class="container">
-    <h2 id="hey-welcome">hey, welcome.</h2>
-<p>Needed a place to put my stuff. So here it is, and here you are.</p>
+    <h2 id="welcome">welcome</h2>
+<p>Needed a place to put my stuff. So here it is&hellip; here you are.</p>
 
 </div>
 
