--- a/about/index.html
+++ b/about/index.html
@@ -53,7 +53,11 @@
 <hr>
 <div id="content">
 <div class="container">
-    <h2 id="who-am-i">who am I?</h2>
+    <figure class="avatar">
+    <img src="/avatar.jpg"/> 
+</figure>
+
+<h2 id="who-am-i">who am I?</h2>
 <p>My name is Alec Trusty. On paper, I&rsquo;m a geographer with some tech skills. 
 In real life, I&rsquo;m a simple Oregonian who loves his fiance and a good adventure. If you&rsquo;d like to chat,
 feel free to contact me at any of the provided links below.</p>
