--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title></title>
+    <title>about</title>
     <meta name="description" content="A place to show Alec Trusty-like things">
     <meta name="author" content='Alec Trusty'>
 
@@ -55,8 +55,17 @@
 <hr>
 <div id="content">
 <div class="container">
-    <h2 id="welcome">welcome</h2>
-<p>Needed a place to put my stuff. So here it is&hellip; here you are.</p>
+    <figure class="avatar">
+    <img src="/avatar.jpg"/> 
+</figure>
+
+<p>My name is Alec Trusty. On paper, I&rsquo;m a geographer with some tech skills. 
+In real life, I&rsquo;m a simple Oregonian who loves his fiance and a good adventure. If you&rsquo;d like to chat,
+feel free to contact me at any of the provided links below.</p>
+<hr>
+<p><a href="a.e.trusty@gmail.com">e-mail</a> |
+<a href="https://github.com/alectrusty">github</a> | 
+<a href="https://www.linkedin.com/in/alec-trusty-30220b109/">linkedIn</a></p>
 
 </div>
 
