--- a/cv/index.html
+++ b/cv/index.html
@@ -11,10 +11,9 @@
 October 2019 - Present
  Independent Contractor / GIS &amp; Data Services
 June 2019 - October 2019
- UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to support various projects.  Necessary Skills: R, Python, QGIS
- Research Analyst / SUPR Lab
+ UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to support various projects.   Research Analyst / SUPR Lab
 January 2017 - January 2018
- Wrangled a ton of spatial and aspatial data into a single PostgreSQL database to inform programmatic decision making at Energy Trust of Oregon  Necessary Skills: R, PostgreSQL / PostGIS, Linux, ArcMap, Data Wrangling">
+ Wrangled a ton of spatial and aspatial data into a single PostgreSQL database to inform programmatic decision making at Energy Trust of Oregon   Publications Link - Antonopoulos C.">
     <meta name="keywords" content="blog,geospatial,data-science,personal">
 
     <meta name="twitter:card" content="summary"/>
@@ -23,20 +22,18 @@ January 2017 - January 2018
 October 2019 - Present
  Independent Contractor / GIS &amp; Data Services
 June 2019 - October 2019
- UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to support various projects.  Necessary Skills: R, Python, QGIS
- Research Analyst / SUPR Lab
+ UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to support various projects.   Research Analyst / SUPR Lab
 January 2017 - January 2018
- Wrangled a ton of spatial and aspatial data into a single PostgreSQL database to inform programmatic decision making at Energy Trust of Oregon  Necessary Skills: R, PostgreSQL / PostGIS, Linux, ArcMap, Data Wrangling"/>
+ Wrangled a ton of spatial and aspatial data into a single PostgreSQL database to inform programmatic decision making at Energy Trust of Oregon   Publications Link - Antonopoulos C."/>
 
     <meta property="og:title" content="" />
 <meta property="og:description" content="Experience NV5 Geospatial / Senior GIS Technician
 October 2019 - Present
  Independent Contractor / GIS &amp; Data Services
 June 2019 - October 2019
- UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to support various projects.  Necessary Skills: R, Python, QGIS
- Research Analyst / SUPR Lab
+ UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to support various projects.   Research Analyst / SUPR Lab
 January 2017 - January 2018
- Wrangled a ton of spatial and aspatial data into a single PostgreSQL database to inform programmatic decision making at Energy Trust of Oregon  Necessary Skills: R, PostgreSQL / PostGIS, Linux, ArcMap, Data Wrangling" />
+ Wrangled a ton of spatial and aspatial data into a single PostgreSQL database to inform programmatic decision making at Energy Trust of Oregon   Publications Link - Antonopoulos C." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://alectrusty.github.io/cv/" />
 
@@ -153,17 +150,15 @@ January 2017 - January 2018
 <p><em>Independent Contractor / GIS &amp; Data Services</em></p>
 <p>June 2019 - October 2019</p>
 <ul>
-<li><a href="https://www.ubc.ca/">UBC</a>: Reproduced a Walkability Index surface model</li>
+<li><a href="https://www.ubc.ca/">UBC</a>: Reproduced a <a href="https://health-design.spph.ubc.ca/tools/walkability-index/">Walkability Index surface model</a></li>
 <li><a href="https://ud4h.com/">UD4H</a>: Wrote a lot of R code to support various projects.</li>
 </ul>
-<p><em>Necessary Skills</em>: R, Python, QGIS</p>
 <hr>
 <p><em>Research Analyst / <a href="https://www.suprlab.org/">SUPR Lab</a></em></p>
 <p>January 2017 - January 2018</p>
 <ul>
 <li>Wrangled a ton of spatial and aspatial data into a single PostgreSQL database to inform programmatic decision making at Energy Trust of Oregon</li>
 </ul>
-<p><em>Necessary Skills</em>: R, PostgreSQL / PostGIS, Linux, ArcMap, Data Wrangling</p>
 <hr>
 <h3 id="publications">Publications</h3>
 <p><a href="https://www.sciencedirect.com/science/article/pii/S2590252020300027?via%3Dihub">Link</a> - Antonopoulos C.A., A. Trusty, and V. Shandas. 2020. &ldquo;The role of building characteristics, demographics, and urban heat islands in shaping residential energy use.&rdquo; City and Environment Interactions 3. PNNL-SA-144554. doi:10.1016/j.cacint.2020.100021</p>
