lots of little updates

--- a/about/index.html
+++ b/about/index.html
@@ -7,18 +7,15 @@
     <meta http-equiv="Content-Language" content="en">
 
     <meta name="author" content="Alec Trusty">
-    <meta name="description" content="My name is Alec Trusty. On paper, I&rsquo;m a geographer with some tech skills. In real life, I&rsquo;m a simple Oregonian who loves his fiance and a good adventure. If you&rsquo;d like to chat, feel free to contact me at any of the provided links below.
- e-mail | github | linkedIn">
+    <meta name="description" content="About Hello World! My name is Alec Trusty. I&rsquo;m a geographic data analyst with over three years experience in GIS and data analysis in a wide variety of applications, with an emphasis on open source software, reproducibility, and automation. I currently work for NV5 Geospatial supporting development of projects ranging from LiDar derived hydrography, forestry biometric analysis, and residential water use mapping. Previously I worked as an independent contractor for Urban Design 4 Health and UBC&rsquo;s Health &amp; Community Design Lab, as well as a research analyst at the Sustaining Urban Places Research Lab.">
     <meta name="keywords" content="blog,geospatial,data-science,personal">
 
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content="My name is Alec Trusty. On paper, I&rsquo;m a geographer with some tech skills. In real life, I&rsquo;m a simple Oregonian who loves his fiance and a good adventure. If you&rsquo;d like to chat, feel free to contact me at any of the provided links below.
- e-mail | github | linkedIn"/>
+<meta name="twitter:description" content="About Hello World! My name is Alec Trusty. I&rsquo;m a geographic data analyst with over three years experience in GIS and data analysis in a wide variety of applications, with an emphasis on open source software, reproducibility, and automation. I currently work for NV5 Geospatial supporting development of projects ranging from LiDar derived hydrography, forestry biometric analysis, and residential water use mapping. Previously I worked as an independent contractor for Urban Design 4 Health and UBC&rsquo;s Health &amp; Community Design Lab, as well as a research analyst at the Sustaining Urban Places Research Lab."/>
 
     <meta property="og:title" content="" />
-<meta property="og:description" content="My name is Alec Trusty. On paper, I&rsquo;m a geographer with some tech skills. In real life, I&rsquo;m a simple Oregonian who loves his fiance and a good adventure. If you&rsquo;d like to chat, feel free to contact me at any of the provided links below.
- e-mail | github | linkedIn" />
+<meta property="og:description" content="About Hello World! My name is Alec Trusty. I&rsquo;m a geographic data analyst with over three years experience in GIS and data analysis in a wide variety of applications, with an emphasis on open source software, reproducibility, and automation. I currently work for NV5 Geospatial supporting development of projects ranging from LiDar derived hydrography, forestry biometric analysis, and residential water use mapping. Previously I worked as an independent contractor for Urban Design 4 Health and UBC&rsquo;s Health &amp; Community Design Lab, as well as a research analyst at the Sustaining Urban Places Research Lab." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://alectrusty.github.io/about/" />
 
@@ -128,11 +125,17 @@
       <h1></h1>
     </header>
 
-    <p>My name is Alec Trusty. On paper, I&rsquo;m a geographer with some tech skills. 
-In real life, I&rsquo;m a simple Oregonian who loves his fiance and a good adventure. If you&rsquo;d like to chat,
-feel free to contact me at any of the provided links below.</p>
+    <h3 id="about">About</h3>
+<p>Hello World! My name is Alec Trusty. I&rsquo;m a geographic data analyst with over three years experience in
+GIS and data analysis in a wide variety of applications, with an emphasis on open source software, reproducibility,
+and automation. I currently work for
+<a href="https://www.nv5.com/services/geospatial-technology/">NV5 Geospatial</a> supporting development of projects ranging from
+LiDar derived hydrography, forestry biometric analysis, and residential water use mapping. Previously I worked as an independent
+contractor for <a href="http://urbandesign4health.com/">Urban Design 4 Health</a> and UBC&rsquo;s <a href="https://health-design.spph.ubc.ca/tools/walkability-index/">Health &amp; Community Design Lab</a>,
+as well as a research analyst at the <a href="https://www.suprlab.org/">Sustaining Urban Places Research Lab</a>. If you&rsquo;d like to connect,
+feel free to reach out using any of the provided links below.</p>
 <hr>
-<p><a href="a.e.trusty@gmail.com">e-mail</a> |
+<p><a href="mailto:a.e.trusty@gmail.com">e-mail</a> |
 <a href="https://github.com/alectrusty">github</a> | 
 <a href="https://www.linkedin.com/in/alec-trusty-30220b109/">linkedIn</a></p>
 
