--- a/cv/index.html
+++ b/cv/index.html
@@ -9,31 +9,25 @@
     <meta name="author" content="Alec Trusty">
     <meta name="description" content="Experience NV5 Geospatial / Senior GIS Technician
 October 2019 - Present
- Independent Contractor / GIS &amp; Data Services
+ Develop and carry out LiDar derived hydrography workflows Analytical support in residential water use and forest biometric analysis   Independent Contractor / GIS &amp; Data Services
 June 2019 - October 2019
- UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to support various projects.   Research Analyst / SUPR Lab
-January 2017 - January 2018
- Wrangled a ton of spatial and aspatial data into a single PostgreSQL database to inform programmatic decision making at Energy Trust of Oregon   Publications Link - Antonopoulos C.">
+ UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to support various projects.   Research Analyst / SUPR Lab">
     <meta name="keywords" content="blog,geospatial,data-science,personal">
 
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content=""/>
 <meta name="twitter:description" content="Experience NV5 Geospatial / Senior GIS Technician
 October 2019 - Present
- Independent Contractor / GIS &amp; Data Services
+ Develop and carry out LiDar derived hydrography workflows Analytical support in residential water use and forest biometric analysis   Independent Contractor / GIS &amp; Data Services
 June 2019 - October 2019
- UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to support various projects.   Research Analyst / SUPR Lab
-January 2017 - January 2018
- Wrangled a ton of spatial and aspatial data into a single PostgreSQL database to inform programmatic decision making at Energy Trust of Oregon   Publications Link - Antonopoulos C."/>
+ UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to support various projects.   Research Analyst / SUPR Lab"/>
 
     <meta property="og:title" content="" />
 <meta property="og:description" content="Experience NV5 Geospatial / Senior GIS Technician
 October 2019 - Present
- Independent Contractor / GIS &amp; Data Services
+ Develop and carry out LiDar derived hydrography workflows Analytical support in residential water use and forest biometric analysis   Independent Contractor / GIS &amp; Data Services
 June 2019 - October 2019
- UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to support various projects.   Research Analyst / SUPR Lab
-January 2017 - January 2018
- Wrangled a ton of spatial and aspatial data into a single PostgreSQL database to inform programmatic decision making at Energy Trust of Oregon   Publications Link - Antonopoulos C." />
+ UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to support various projects.   Research Analyst / SUPR Lab" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://alectrusty.github.io/cv/" />
 
@@ -146,6 +140,10 @@ January 2017 - January 2018
     <h3 id="experience">Experience</h3>
 <p><em><a href="https://quantumspatial.com/">NV5 Geospatial</a> / Senior GIS Technician</em></p>
 <p>October 2019 - Present</p>
+<ul>
+<li>Develop and carry out LiDar derived hydrography workflows</li>
+<li>Analytical support in residential water use and forest biometric analysis</li>
+</ul>
 <hr>
 <p><em>Independent Contractor / GIS &amp; Data Services</em></p>
 <p>June 2019 - October 2019</p>
@@ -164,10 +162,10 @@ January 2017 - January 2018
 <p><a href="https://www.sciencedirect.com/science/article/pii/S2590252020300027?via%3Dihub">Link</a> - Antonopoulos C.A., A. Trusty, and V. Shandas. 2020. &ldquo;The role of building characteristics, demographics, and urban heat islands in shaping residential energy use.&rdquo; City and Environment Interactions 3. PNNL-SA-144554. doi:10.1016/j.cacint.2020.100021</p>
 <hr>
 <h3 id="skills">Skills</h3>
-<p><strong>GIS &amp; Remote Sensing</strong>: Data creation and manipulation, vector and raster analysis, cartographic design, basic satellite image acquisition, calibration, and processing</p>
-<p><strong>Statistics</strong>: Classification &amp; regression techniques, spatial statistics (spatial autocorrelation and regression), bayesian resampling, random forests, XGBOOST, bayesian impuation, k-NN</p>
-<p><strong>Programming</strong>: R, Python, SQL, JavaScript (Basics)</p>
-<p><strong>Software / OS</strong>: Rstudio, Jupyter Lab, QGIS, Windows, Linux</p>
+<p><strong>GIS &amp; Remote Sensing</strong>: Data creation and manipulation, vector and raster analysis, spatial autocorrelation &amp; regression, cartographic design</p>
+<p><strong>Statistics &amp; Algorithms</strong>: Classification &amp; regression techniques, bayesian multiple imputation, random forests, k-NN</p>
+<p><strong>Programming</strong>: R, Python, SQL</p>
+<p><strong>Software / OS</strong>: Rstudio, Jupyter Lab, QGIS, Google Earth Engine, Windows/Linux</p>
 <hr>
 <h3 id="education">Education</h3>
 <p><strong>Portland State University, Portland OR</strong></p>
