--- a/projects/index.html
+++ b/projects/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="Content-Language" content="en">
 
     <meta name="author" content="Alec Trusty">
-    <meta name="description" content="Publications Urban Heat Islands &amp; Residential Energy Consumption
+    <meta name="description" content="Most of my work has been done in proprietary environments, but here are a few open source tidbits and examples of my work.
+Publications Urban Heat Islands &amp; Residential Energy Consumption
 Python OpenHydro
 LandSat-Grabber
 Data Visualization Shiny Dashboard | Proof of Concept | Code
@@ -16,14 +17,16 @@ ESRI Story Map | Arctic Area-Based Management">
 
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content="Publications Urban Heat Islands &amp; Residential Energy Consumption
+<meta name="twitter:description" content="Most of my work has been done in proprietary environments, but here are a few open source tidbits and examples of my work.
+Publications Urban Heat Islands &amp; Residential Energy Consumption
 Python OpenHydro
 LandSat-Grabber
 Data Visualization Shiny Dashboard | Proof of Concept | Code
 ESRI Story Map | Arctic Area-Based Management"/>
 
     <meta property="og:title" content="" />
-<meta property="og:description" content="Publications Urban Heat Islands &amp; Residential Energy Consumption
+<meta property="og:description" content="Most of my work has been done in proprietary environments, but here are a few open source tidbits and examples of my work.
+Publications Urban Heat Islands &amp; Residential Energy Consumption
 Python OpenHydro
 LandSat-Grabber
 Data Visualization Shiny Dashboard | Proof of Concept | Code
@@ -137,7 +140,8 @@ ESRI Story Map | Arctic Area-Based Management" />
       <h1></h1>
     </header>
 
-    <h3 id="publications">Publications</h3>
+    <p>Most of my work has been done in proprietary environments, but here are a few open source tidbits and examples of my work.</p>
+<h3 id="publications">Publications</h3>
 <p><a href="https://www.sciencedirect.com/science/article/pii/S2590252020300027?via%3Dihub">Urban Heat Islands &amp; Residential Energy Consumption</a></p>
 <h3 id="python">Python</h3>
 <p><a href="https://github.com/alectrusty/OpenHydro">OpenHydro</a></p>
