--- a/cv/index.html
+++ b/cv/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Language" content="en">
 
     <meta name="author" content="Alec Trusty">
-    <meta name="description" content="Experience NV5 Geospatial / Senior GIS Technician
+    <meta name="description" content="Experience Senior GIS Technician / NV5 Geospatial
 October 2019 - Present
  Develop and carry out LiDar derived hydrography workflows Analytical support in residential water use and forest biometric analysis   Independent Contractor / GIS &amp; Data Services
 June 2019 - October 2019
@@ -16,14 +16,14 @@ June 2019 - October 2019
 
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content="Experience NV5 Geospatial / Senior GIS Technician
+<meta name="twitter:description" content="Experience Senior GIS Technician / NV5 Geospatial
 October 2019 - Present
  Develop and carry out LiDar derived hydrography workflows Analytical support in residential water use and forest biometric analysis   Independent Contractor / GIS &amp; Data Services
 June 2019 - October 2019
  UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to support various projects.   Research Analyst / SUPR Lab"/>
 
     <meta property="og:title" content="" />
-<meta property="og:description" content="Experience NV5 Geospatial / Senior GIS Technician
+<meta property="og:description" content="Experience Senior GIS Technician / NV5 Geospatial
 October 2019 - Present
  Develop and carry out LiDar derived hydrography workflows Analytical support in residential water use and forest biometric analysis   Independent Contractor / GIS &amp; Data Services
 June 2019 - October 2019
@@ -138,7 +138,7 @@ June 2019 - October 2019
     </header>
 
     <h3 id="experience">Experience</h3>
-<p><em><a href="https://quantumspatial.com/">NV5 Geospatial</a> / Senior GIS Technician</em></p>
+<p><em>Senior GIS Technician / <a href="https://quantumspatial.com/">NV5 Geospatial</a></em></p>
 <p>October 2019 - Present</p>
 <ul>
 <li>Develop and carry out LiDar derived hydrography workflows</li>
