--- a/projects/index.html
+++ b/projects/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Alec Trusty">
     <meta name="description" content="Most of my work has been done in proprietary environments, but here are a few open source tidbits and examples of my work.
 Publications Urban Heat Islands &amp; Residential Energy Consumption
-Python OpenHydro
+Python Hydro helper functions
 LandSat-Grabber
 Data Visualization Shiny Dashboard | Proof of Concept | Code
 ESRI Story Map | Arctic Area-Based Management">
@@ -19,7 +19,7 @@ ESRI Story Map | Arctic Area-Based Management">
 <meta name="twitter:title" content=""/>
 <meta name="twitter:description" content="Most of my work has been done in proprietary environments, but here are a few open source tidbits and examples of my work.
 Publications Urban Heat Islands &amp; Residential Energy Consumption
-Python OpenHydro
+Python Hydro helper functions
 LandSat-Grabber
 Data Visualization Shiny Dashboard | Proof of Concept | Code
 ESRI Story Map | Arctic Area-Based Management"/>
@@ -27,7 +27,7 @@ ESRI Story Map | Arctic Area-Based Management"/>
     <meta property="og:title" content="" />
 <meta property="og:description" content="Most of my work has been done in proprietary environments, but here are a few open source tidbits and examples of my work.
 Publications Urban Heat Islands &amp; Residential Energy Consumption
-Python OpenHydro
+Python Hydro helper functions
 LandSat-Grabber
 Data Visualization Shiny Dashboard | Proof of Concept | Code
 ESRI Story Map | Arctic Area-Based Management" />
@@ -144,7 +144,7 @@ ESRI Story Map | Arctic Area-Based Management" />
 <h3 id="publications">Publications</h3>
 <p><a href="https://www.sciencedirect.com/science/article/pii/S2590252020300027?via%3Dihub">Urban Heat Islands &amp; Residential Energy Consumption</a></p>
 <h3 id="python">Python</h3>
-<p><a href="https://github.com/alectrusty/OpenHydro">OpenHydro</a></p>
+<p><a href="https://github.com/alectrusty/hydro_functions/blob/main/processing_functions.py">Hydro helper functions</a></p>
 <p><a href="https://github.com/alectrusty/landsat-grabber">LandSat-Grabber</a></p>
 <h3 id="data-visualization">Data Visualization</h3>
 <p><a href="https://alectrusty.shinyapps.io/pdx_housing_dashboard/">Shiny Dashboard | Proof of Concept</a> |
