--- a/cv/index.html
+++ b/cv/index.html
@@ -11,7 +11,7 @@
 October 2019 - Present
  Develop and carry out LiDar derived hydrography workflows Analytical support in residential water use and forest biometric analysis   Independent Contractor / GIS &amp; Data Services
 June 2019 - October 2019
- UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to support various projects.   Research Analyst / SUPR Lab">
+ UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to develop consistent and standardized urban health indicators.   Research Analyst / SUPR Lab">
     <meta name="keywords" content="blog,geospatial,data-science,personal">
 
     <meta name="twitter:card" content="summary"/>
@@ -20,14 +20,14 @@ June 2019 - October 2019
 October 2019 - Present
  Develop and carry out LiDar derived hydrography workflows Analytical support in residential water use and forest biometric analysis   Independent Contractor / GIS &amp; Data Services
 June 2019 - October 2019
- UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to support various projects.   Research Analyst / SUPR Lab"/>
+ UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to develop consistent and standardized urban health indicators.   Research Analyst / SUPR Lab"/>
 
     <meta property="og:title" content="" />
 <meta property="og:description" content="Experience Senior GIS Technician / NV5 Geospatial
 October 2019 - Present
  Develop and carry out LiDar derived hydrography workflows Analytical support in residential water use and forest biometric analysis   Independent Contractor / GIS &amp; Data Services
 June 2019 - October 2019
- UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to support various projects.   Research Analyst / SUPR Lab" />
+ UBC: Reproduced a Walkability Index surface model UD4H: Wrote a lot of R code to develop consistent and standardized urban health indicators.   Research Analyst / SUPR Lab" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://alectrusty.github.io/cv/" />
 
@@ -149,7 +149,7 @@ June 2019 - October 2019
 <p>June 2019 - October 2019</p>
 <ul>
 <li><a href="https://www.ubc.ca/">UBC</a>: Reproduced a <a href="https://health-design.spph.ubc.ca/tools/walkability-index/">Walkability Index surface model</a></li>
-<li><a href="https://ud4h.com/">UD4H</a>: Wrote a lot of R code to support various projects.</li>
+<li><a href="https://ud4h.com/">UD4H</a>: Wrote a lot of R code to develop consistent and standardized urban health indicators.</li>
 </ul>
 <hr>
 <p><em>Research Analyst / <a href="https://www.suprlab.org/">SUPR Lab</a></em></p>
@@ -162,10 +162,10 @@ June 2019 - October 2019
 <p><a href="https://www.sciencedirect.com/science/article/pii/S2590252020300027?via%3Dihub">Link</a> - Antonopoulos C.A., A. Trusty, and V. Shandas. 2020. &ldquo;The role of building characteristics, demographics, and urban heat islands in shaping residential energy use.&rdquo; City and Environment Interactions 3. PNNL-SA-144554. doi:10.1016/j.cacint.2020.100021</p>
 <hr>
 <h3 id="skills">Skills</h3>
-<p><strong>GIS &amp; Remote Sensing</strong>: Data creation and manipulation, vector and raster analysis, spatial autocorrelation &amp; regression, cartographic design</p>
-<p><strong>Statistics &amp; Algorithms</strong>: Classification &amp; regression techniques, bayesian multiple imputation, random forests, k-NN</p>
-<p><strong>Programming</strong>: R, Python, SQL</p>
-<p><strong>Software / OS</strong>: Rstudio, Jupyter Lab, QGIS, Google Earth Engine, Windows/Linux</p>
+<p><strong>GIS &amp; Remote Sensing</strong>: Spatial data creation and manipulation, vector and raster analysis, cartographic design, land use classification</p>
+<p><strong>Statistics / Machine Learning</strong>: Linear regression, spatial regression, random forests, k-NN, multiple imputation, bootstrap sampling</p>
+<p><strong>Programming</strong>: R (data.table, tidyverse, caret, sf, raster); Python (numpy, pandas, geopandas, rasterio), SQL</p>
+<p><strong>Software / OS</strong>:  Rstudio, PyCharm, Jupyter Lab, QGIS, Git, Google Earth Engine, Windows/Linux</p>
 <hr>
 <h3 id="education">Education</h3>
 <p><strong>Portland State University, Portland OR</strong></p>
