--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       
         
           <li>
-            <a href="https://twitter.com/johndoe/" aria-label="Twitter"   >
+            <a href="https://twitter.com/alec_trusty/" aria-label="Twitter"   >
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
           </li>
